# digimon-mcp2

./: main.py  pyproject.toml  types.txt
.agents/digimon-agent/: SKILL.md
src/: server.py
src/local_testing/: langchain_testing.py
src/primitives/: base.py
src/primitives/resources/: api_resources.py
src/primitives/tools/: api_tools.py
